Refactor html and folder structure

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="navbar-container">
       <div class="navbar">
         <div class="navbar-content">
-          <img class="logo" src="./assets/final2/logo presidencia-01.svg" alt="Ministerio de Modernización Presidencia de la Nación">
+          <img class="logo" src="./assets/logo presidencia-01.svg" alt="Ministerio de Modernización Presidencia de la Nación">
           <span class="redes">
             <p class="comparti">Compartí</p>
             <a href="https://www.facebook.com/GobAbiertoAR/" target="_blank" class="pull-right">
@@ -104,20 +104,16 @@
                 Durante el mes de septiembre de 2018 viajaron <span class="bold">1.326.571 pasajeros en vuelos de
                   cabotaje</span>, un 13% más que el mismo mes del año anterior.
               </div>
-              <!-- <div class="secFour-paragraph">
-                    <span class="secFour-subtitle">San Carlos de Bariloche</span>
-                    La mayor cantidad de vuelos a este destino se registraron en los dias de más frio.
-                </div> -->
-              <img class="grafico-lineas-bariloche" src="./assets/final2/grafico linea desktop.svg" alt="grafico vuelos a bariloche según el clíma">
+              <img class="grafico-lineas-bariloche" src="./assets/grafico linea desktop.svg" alt="grafico vuelos a bariloche según el clíma">
               <!-- mobile graph -->
-              <img class="grafico-lineas-bariloche-mobile" src="./assets/final2/grafico linea mobile.svg" alt="grafico vuelos a bariloche según el clíma">
+              <img class="grafico-lineas-bariloche-mobile" src="./assets/grafico linea mobile.svg" alt="grafico vuelos a bariloche según el clíma">
             </div>
           </div>
 
           <!-- SECTION TWO -->
           <div class="secTwo">
             <div class="secOne-content secOne-content-two">
-              <img class="vuelos-nacionales-svg" src="./assets/final2/mapa aeropuertos.svg" alt="">
+              <img class="vuelos-nacionales-svg" src="./assets/mapa aeropuertos.svg" alt="">
               <div class="secOne-text-container margin-top-text-container">
                 <div class="secOne-title">
                   Aeropuertos que más crecieron
@@ -155,14 +151,14 @@
                     Buenos Aires. </div>
                 </div>
               </div>
-              <img class="vuelos-internacionales-svg" src="./assets/final/Mapa-rutas.svg" alt="">
+              <img class="vuelos-internacionales-svg" src="./assets/Mapa-rutas.svg" alt="">
             </div>
           </div>
 
           <!-- SECTION FOUR -->
           <div class="secTwo count">
             <div class="secOne-content secOne-content-two">
-              <img class="vuelos-nacionales-svg" src="./assets/final/Mapa-mundo_Mesa de trabajo 1.svg" alt="">
+              <img class="vuelos-nacionales-svg" src="./assets/Mapa-mundo_Mesa de trabajo 1.svg" alt="">
               <div class="secOne-text-container">
                 <div class="secOne-title">
                   Nuevas conexiones hacia el mundo
@@ -176,44 +172,9 @@
             </div>
           </div>
 
-          <!-- <div class="secThree">
-              <div class="secThree-content">
-                  <div class="secThree-title">Más vuelos, más pasajeros, más conectados</div>
-                  <div class="box-container-section">
-                      <div class="box-section">
-                          <img class="icon" src="./assets/icono_avion.svg" alt="">
-                          <div class="box-number">324.990</div>
-                          <div class="box-text">
-                              Son los vuelos regulares realizados. Un 9,4% más que en 2016.
-                          </div>
-                      </div>
-                      <div class="box-section">
-                          <img class="icon-rutas" src="./assets/icono_rutas.svg" alt="">
-                          <div class="box-number">54</div>
-                          <div class="box-text">
-                              Nuevas rutas. Desde 2015 se sumaron 31 rutas de cabotaje y 23 internacionales.
-                          </div>
-                      </div>
-                      <div class="box-section">
-                          <img class="icon" src="./assets/icono_pasajero.svg" alt="">
-                          <div class="box-number">27.659.925</div>
-                          <div class="box-text">
-                              Es la cantidad de pasajeros transportados, un 15% más que en 2016.
-                          </div>
-                      </div>
-                  </div>
-              </div>
-          </div> -->
-
           <!-- SECTION FIVE -->
           <div class="secFive">
             <div class="secFive-content">
-              <!-- <div class="secFive-title">
-                                ¿Querés saber más sobre este tema?
-                            </div>
-                            <div class="verCuriosidades-button">
-                                VER CURIOSIDADES
-                            </div> -->
               <div class="secFive-paragraph">
                 Este producto es posible gracias a los datos proporcionados por
                 <strong>
@@ -229,51 +190,16 @@
               </span>
             </div>
           </div>
-
           <div class="secSix">
             <div class="secSix-content">
               <div class="secSix-left">
                 <span class="redes-secSix">
-                  <img class="secSix-logo" src="./assets/final2/logo transporte-01.svg" alt="Ministerio de modernización">
+                  <img class="secSix-logo" src="./assets/logo transporte-01.svg" alt="Ministerio de modernización">
                 </span>
                 <img class="secSix-logo" src="./assets/logo-ministerio-modernizacion.png" alt="Ministerio de modernización">
               </div>
             </div>
           </div>
-
-          <!-- <div class="secSix">
-            <div class="secSix-content">
-                <div class="secSix-left">
-                    <span class="redes-secSix">
-                        <a href="https://medium.com/datos-argentina" target="_blank" class="pull-right">
-                            <i class="fa fa-medium fa-2x" aria-hidden="true"></i>
-                        </a>
-                        <a href="https://github.com/datosgobar" target="_blank" class="pull-right">
-                            <i class="fa fa-github-alt fa-2x" aria-hidden="true"></i>
-                        </a>
-                        <a href="https://twitter.com/datosgobar" target="_blank" class="pull-right">
-                            <i class="fa fa-twitter fa-2x" aria-hidden="true"></i>
-                        </a>
-                        <a href="https://www.facebook.com/GobAbiertoAR/" target="_blank" class="pull-right">
-                            <i class="fa fa-facebook fa-2x" aria-hidden="true"></i>
-                        </a>
-                    </span>
-                    <img class="secSix-logo" src="./assets/logo-ministerio-modernizacion.png" alt="Ministerio de modernización">
-                </div>
-                <div class="secSix-right">
-                    <ul>
-                        <li style="margin-bottom: 10px;">
-                            <a href="mailto:datos@modernizacion.gob.ar">Contactanos</a>
-                        </li>
-                        <li>
-                            <a href="http://datos.gob.ar/acerca/seccion/Nuestro%20Equipo" target="_blank">Nuestro
-                                equipo
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-           </div> -->
         </div>
       </div>
     </div>
@@ -282,11 +208,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
     <!-- Load scripts -->
-    <script src="./js/buttons.js"></script>
-    <script src="./js/mapOne.js"></script>
-    <script src="./js/mapTwo.js"></script>
-    <script src="./js/scroll.js"></script>
-    <script src="./js/scrollEvents.js"></script>
+    <script src="./js/buttons/buttons.js"></script>
+    <script src="./js/maps/mapOne.js"></script>
+    <script src="./js/maps/mapTwo.js"></script>
+    <script src="./js/scroll/scroll.js"></script>
+    <script src="./js/scroll/scrollEvents.js"></script>
   </body>
 
 </html>
