Corrects index typos

--- a/index.html
+++ b/index.html
@@ -52,9 +52,8 @@
       <div class="section section-one">
         <div class="title-content fade-waiting">
           <span class="title">Los argentinos más conectados</span>
-          <span class="title-paragraph">El sector aerocomercial continúa creciendo y uniendo a los
-            argentinos.
-            Mirá cómo fueron todos los vuelos del año.</span>
+          <span class="title-paragraph">El sector aerocomercial continúa creciendo y uniendo a los argentinos. Mirá
+            cómo fueron todos los vuelos del año.</span>
         </div>
         <div id="mapOne"></div>
       </div>
@@ -136,8 +135,7 @@
                 </div>
                 <div class="secOne-paragraph">
                   Se incorporaron nuevas rutas aéreas para mejorar la conectividad dentro del país de
-                  una manera federal, sin necesidad de
-                  pasar por Buenos Aires.
+                  una manera federal, sin necesidad de pasar por Buenos Aires.
                   <br />
                   <br /><span class="line"></span><span class="rutas-text-reference">Nuevas rutas
                     aéreas</span>
