Refactor media queries and add meta tags

--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- Facebook -->
+    <meta property="og:title" content="European Travel Destinations">
+    <meta property="og:description" content="Offering tour packages for individuals or groups.">
+    <meta property="og:image" content="http://euro-travel-example.com/thumbnail.jpg">
+    <meta property="og:url" content="http://euro-travel-example.com/index.htm">
+    <!-- Twitter -->
+    <meta name="twitter:title" content="Travel Destinations ">
+    <meta name="twitter:description" content=" Offering tour packages for individuals or groups.">
+    <meta name="twitter:image" content=" http://euro-travel-example.com/thumbnail.jpg">
+    <meta name="twitter:card" content="summary_large_image">
+    <!-- title -->
     <title>Vuelos</title>
     <link rel="shortcut icon" href="https://argob.github.io/poncho/favicon.ico">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1"
@@ -24,10 +35,10 @@
           <img class="logo" src="./assets/logo presidencia-01.svg" alt="Ministerio de Modernización Presidencia de la Nación">
           <span class="redes">
             <p class="comparti">Compartí</p>
-            <a href="https://www.facebook.com/GobAbiertoAR/" target="_blank" class="pull-right">
+            <a href="https://www.facebook.com/sharer/sharer.php?u=" target="_blank" class="pull-right">
               <i class="fa fa-facebook fa-2x" aria-hidden="true"></i>
             </a>
-            <a href="https://twitter.com/datosgobar" target="_blank" class="pull-right">
+            <a href="https://twitter.com/home?status=" target="_blank" class="pull-right">
               <i class="fa fa-twitter fa-2x" aria-hidden="true"></i>
             </a>
           </span>
