--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- Facebook -->
-    <meta property="og:title" content="European Travel Destinations">
-    <meta property="og:description" content="Offering tour packages for individuals or groups.">
-    <meta property="og:image" content="http://euro-travel-example.com/thumbnail.jpg">
-    <meta property="og:url" content="http://euro-travel-example.com/index.htm">
+    <meta property="og:title" content="Los argentinos más conectados">
+    <meta property="og:description" content="El sector aerocomercial continúa creciendo y uniendo a los argentinos. Mirá cómo fueron todos los vuelos del año.">
+    <meta property="og:image" content="./assets/Vuelos_metatag_FB.png">
+    <meta property="og:url" content="https://juansalvatore.github.io/argentinan-flights-cartojs/">
     <!-- Twitter -->
     <meta name="twitter:title" content="Travel Destinations ">
     <meta name="twitter:description" content=" Offering tour packages for individuals or groups.">
-    <meta name="twitter:image" content=" http://euro-travel-example.com/thumbnail.jpg">
+    <meta name="twitter:image" content="http://euro-travel-example.com/thumbnail.jpg">
     <meta name="twitter:card" content="summary_large_image">
     <!-- title -->
     <title>Vuelos</title>
