Updates image path in facebook meta tag

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <!-- Facebook -->
     <meta property="og:title" content="Los argentinos más conectados">
     <meta property="og:description" content="El sector aerocomercial continúa creciendo y uniendo a los argentinos. Mirá cómo fueron todos los vuelos del año.">
-    <meta property="og:image" content="./assets/Vuelos_metatag_FB.png">
+    <meta property="og:image" content="https://juansalvatore.github.io/argentinan-flights-cartojs/assets/Vuelos_metatag_FB.png">
     <meta property="og:url" content="https://juansalvatore.github.io/argentinan-flights-cartojs/">
     <!-- Twitter -->
     <meta name="twitter:title" content="Travel Destinations ">
     <meta name="twitter:description" content=" Offering tour packages for individuals or groups.">
-    <meta name="twitter:image" content="http://euro-travel-example.com/thumbnail.jpg">
+    <meta name="twitter:image" content="./assets/Vuelos_metatag_FB.png">
     <meta name="twitter:card" content="summary_large_image">
     <!-- title -->
     <title>Vuelos</title>
