New facebook image

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Facebook -->
     <meta property="og:title" content="Los argentinos más conectados">
     <meta property="og:description" content="El sector aerocomercial continúa creciendo y uniendo a los argentinos. Mirá cómo fueron todos los vuelos del año.">
-    <meta property="og:image" content="https://juansalvatore.github.io/argentinan-flights-cartojs/assets/Vuelos_metatag_FB.png">
+    <meta property="og:image" content="https://i.imgur.com/LmnIWew.png">
     <meta property="og:url" content="https://juansalvatore.github.io/argentinan-flights-cartojs/">
     <!-- Twitter -->
     <meta name="twitter:title" content="Travel Destinations ">
