--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <meta property="og:image" content="https://i.imgur.com/LmnIWew.png">
     <meta property="og:url" content="https://juansalvatore.github.io/argentinan-flights-cartojs/">
     <!-- Twitter -->
-    <meta name="twitter:title" content="Travel Destinations ">
-    <meta name="twitter:description" content=" Offering tour packages for individuals or groups.">
-    <meta name="twitter:image" content="./assets/Vuelos_metatag_FB.png">
+    <meta name="twitter:title" content="Los argentinos más conectados">
+    <meta name="twitter:description" content="El sector aerocomercial continúa creciendo y uniendo a los argentinos. Mirá cómo fueron todos los vuelos del año.">
+    <meta name="twitter:image" content="https://i.imgur.com/8sZEF3O.png">
     <meta name="twitter:card" content="summary_large_image">
     <!-- title -->
     <title>Vuelos</title>
